--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/app.css" />
+    <link rel="stylesheet" href="/style/app.css" />
     <title>The best croissant en new york - Croissant</title>
   </head>
   <body>
