--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/app.css" />
-    <title>The best croissant en new york - Croissant</title>
+    <title>The best croissant en new york - Croissant.com</title>
+    <meta name="description" content="Taste the best croissant in new york" />
   </head>
   <body>
     <h1>🥐 Croissant</h1>
