Made website SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
     </p>
     <div class="footer">
       <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/photo.html" title="Croissant photo">Photo</a>
+      <a href="/contact.html" title="Croissant photo">Contact</a>
     </div>
   </body>
 </html>
