--- a/photo.html
+++ b/photo.html
@@ -15,12 +15,13 @@
     <h1>🥐 A picture of a croissant</h1>
     <img
       src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg"
+      alt="Homemade croissant"
       alt=""
     />
     <div class="footer">
       <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/photo.html" title="Croissant photo">Photo</a>
+      <a href="/contact.html" title="Croissant photo">Contact</a>
     </div>
   </body>
 </html>
